--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@angular/router": "~12.0.3",
     "ng2-charts": "^2.4.2",
     "rxjs": "~6.6.0",
+    "sweetalert2": "^11.0.17",
     "tslib": "^2.1.0",
     "zone.js": "~0.11.4"
   },
